--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,11 +240,15 @@
 #footer {
   background-color: #2d314d;
   font-family: PublicSans;
-  min-height: 15vh;
-  display: grid;
+  display: flex;
+  flex: 0 0 auto;
+  min-height: 0px;
   align-items: center;
 }
 #footer #footer-content {
+  flex: 1 1 auto;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
   width: 80vw;
   margin-left: 10vw;
   margin-right: 10vw;
