hover animations fixes

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -31,6 +31,17 @@
 
         .social{
             grid-area: social;
+
+            img{
+                position: relative;
+                margin-right: 0.5vw;
+                cursor: pointer;
+                transition: all 300ms;
+            }
+
+            img:hover{
+                filter: brightness(50%) sepia(1) hue-rotate(90deg) saturate(3.5);
+            }
         }
         
         #footer-menu{
@@ -41,6 +52,11 @@
                 margin: 5px;
                 a{
                     color: $very-light-gray;
+                    transition: all 300ms;
+                }
+
+                a:hover{
+                    color: $lime-green;
                 }
             }
         }
