--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,7 @@
   font-weight: 400;
   transition: all 300ms;
   position: relative;
+  overflow: hidden;
 }
 .request-btn a:before {
   content: "";
@@ -264,6 +265,15 @@
 #footer #footer-content .social {
   grid-area: social;
 }
+#footer #footer-content .social img {
+  position: relative;
+  margin-right: 0.5vw;
+  cursor: pointer;
+  transition: all 300ms;
+}
+#footer #footer-content .social img:hover {
+  filter: brightness(50%) sepia(1) hue-rotate(90deg) saturate(3.5);
+}
 #footer #footer-content #footer-menu {
   grid-area: main-menu;
   display: grid;
@@ -274,6 +284,10 @@
 }
 #footer #footer-content #footer-menu li a {
   color: #fafafa;
+  transition: all 300ms;
+}
+#footer #footer-content #footer-menu li a:hover {
+  color: #31d35c;
 }
 #footer #footer-content .request-btn {
   grid-area: request-button;
