--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -39,6 +39,7 @@
         font-weight: $medium-weight;
         transition: all 300ms;
         position: relative;
+        overflow: hidden;
     }
 
     a:before {
